--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "970902a1",
    "metadata": {},
    "source": [
-    "# TopoGravCorrelator\n",
+    "# TerraLoad\n",
     "Welcome! This is a project that is supposed to explore the correlation between land elevation (topographic elevation) and gravity anomalies. I'll be adding more to this as time goes on. Hopefully I finish it!\n",
     "\n",
     "**Grace Dataset**\n",
