--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "970902a1",
    "metadata": {},
    "source": [
-    "# TerraLoad\n",
+    "# TopoGravCorrelator\n",
     "Welcome! This is a project that is supposed to explore the correlation between land elevation (topographic elevation) and gravity anomalies. I'll be adding more to this as time goes on. Hopefully I finish it!\n",
     "\n",
     "**Grace Dataset**\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "4f13e687",
    "metadata": {},
    "outputs": [
@@ -220,16 +220,18 @@
      "data": {
       "text/html": [
        "\n",
-       "<div style = \"display: flex; gap: 15px;\">\n",
-       "    <div>\n",
-       "        <img src = \"Assets/grace_lwe_animation.gif\" width = \"1000\">\n",
-       "        <p style = \"text-align: center;\" > LWE Thickness</p>\n",
-       "    </div>\n",
-       "    <div>\n",
-       "        <img src = \"Assets/LWE Gravity Change.gif\" width = \"1000\">\n",
-       "        <p style = \"text-align:center;\">Gravity Anomaly</p>\n",
-       "    </div>\n",
-       "</div>\n"
+       "<table>\n",
+       "  <tr>\n",
+       "    <td style=\"text-align:center;\">\n",
+       "      <img src=\"Assets/grace_lwe_animation.gif\" width=\"900\"><br>\n",
+       "      <p>LWE Thickness</p>\n",
+       "    </td>\n",
+       "    <td style=\"text-align:center;\">\n",
+       "      <img src=\"Assets/LWE Gravity Change.gif\" width=\"900\"><br>\n",
+       "      <p>Gravity Anomaly</p>\n",
+       "    </td>\n",
+       "  </tr>\n",
+       "</table>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -242,17 +244,19 @@
    "source": [
     "from IPython.display import display, HTML\n",
     "display(HTML(\"\"\"\n",
-    "<div style = \"display: flex; gap: 15px;\">\n",
-    "    <div>\n",
-    "        <img src = \"Assets/grace_lwe_animation.gif\" width = \"1000\">\n",
-    "        <p style = \"text-align: center;\" > LWE Thickness</p>\n",
-    "    </div>\n",
-    "    <div>\n",
-    "        <img src = \"Assets/LWE Gravity Change.gif\" width = \"1000\">\n",
-    "        <p style = \"text-align:center;\">Gravity Anomaly</p>\n",
-    "    </div>\n",
-    "</div>\n",
-    "\"\"\"))"
+    "<table>\n",
+    "  <tr>\n",
+    "    <td style=\"text-align:center;\">\n",
+    "      <img src=\"Assets/grace_lwe_animation.gif\" width=\"900\"><br>\n",
+    "      <p>LWE Thickness</p>\n",
+    "    </td>\n",
+    "    <td style=\"text-align:center;\">\n",
+    "      <img src=\"Assets/LWE Gravity Change.gif\" width=\"900\"><br>\n",
+    "      <p>Gravity Anomaly</p>\n",
+    "    </td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\"\"\"))\n"
    ]
   },
   {
