Another yet another reupload
grr

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "4f13e687",
    "metadata": {},
    "outputs": [
@@ -220,18 +220,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<table>\n",
-       "  <tr>\n",
-       "    <td style=\"text-align:center;\">\n",
-       "      <img src=\"Assets/grace_lwe_animation.gif\" width=\"900\"><br>\n",
-       "      <p>LWE Thickness</p>\n",
-       "    </td>\n",
-       "    <td style=\"text-align:center;\">\n",
-       "      <img src=\"Assets/LWE Gravity Change.gif\" width=\"900\"><br>\n",
-       "      <p>Gravity Anomaly</p>\n",
-       "    </td>\n",
-       "  </tr>\n",
-       "</table>\n"
+       "<div style=\"text-align: center;\">\n",
+       "    <img src=\"Assets/grace_lwe_animation.gif\" width=\"1000\"><br>\n",
+       "    <p style=\"font-weight: bold;\">LWE Thickness</p>\n",
+       "    <br>\n",
+       "    <img src=\"Assets/LWE Gravity Change.gif\" width=\"1000\"><br>\n",
+       "    <p style=\"font-weight: bold;\">Gravity Change</p>\n",
+       "</div>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -243,20 +238,16 @@
    ],
    "source": [
     "from IPython.display import display, HTML\n",
+    "\n",
     "display(HTML(\"\"\"\n",
-    "<table>\n",
-    "  <tr>\n",
-    "    <td style=\"text-align:center;\">\n",
-    "      <img src=\"Assets/grace_lwe_animation.gif\" width=\"900\"><br>\n",
-    "      <p>LWE Thickness</p>\n",
-    "    </td>\n",
-    "    <td style=\"text-align:center;\">\n",
-    "      <img src=\"Assets/LWE Gravity Change.gif\" width=\"900\"><br>\n",
-    "      <p>Gravity Anomaly</p>\n",
-    "    </td>\n",
-    "  </tr>\n",
-    "</table>\n",
-    "\"\"\"))\n"
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"Assets/grace_lwe_animation.gif\" width=\"1000\"><br>\n",
+    "    <p style=\"font-weight: bold;\">LWE Thickness</p>\n",
+    "    <br>\n",
+    "    <img src=\"Assets/LWE Gravity Change.gif\" width=\"1000\"><br>\n",
+    "    <p style=\"font-weight: bold;\">Gravity Change</p>\n",
+    "</div>\n",
+    "\"\"\"))"
    ]
   },
   {
